# English-speech-assistant-backend

./: README.md  main.py  pyproject.toml
app/: api.py  config.py  llm.py  logger.py  schemas.py  stt.py  utils.py
