[project]
name = "english-speech-assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "black>=25.1.0",
    "fastapi>=0.116.2",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "openai>=1.107.3",
    "pydub>=0.25.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
[tool.uv.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 5000"
start = "uvicorn app.main:app --host 0.0.0.0 --port 5000"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"